--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -1,14 +1,6 @@
 div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarController')
-  div.container
-    div.navbar-header
-      button.navbar-toggle(type='button', ng-click='nav.isCollapsed = !nav.isCollapsed')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='/') contactmanager
-
-    div#navbar-main.navbar-collapse.collapse(uib-collapse='nav.isCollapsed')
-      ul.nav.navbar-nav
-        li(ng-repeat='item in nav.menu', ui-sref-active='active')
-          a(ui-sref='{{item.state}}') {{item.title}}
+    h1.center Contact Manager
+    //- md-fab-toolbar(md-open='demo.isOpen', count='demo.count', md-direction='left', ui-sref='contact')
+    //-   md-fab-trigger.align-with-text
+    //-     md-button.md-fab.md-primary(aria-label='menu')
+    //-       md-icon(md-svg-src='img/icons/menu.svg')
